--- a/etc/initdb.sh.in
+++ b/etc/initdb.sh.in
@@ -23,7 +23,7 @@ echo ${SOCKET} >.mysql.socket
 
 # now start the DB.
 # have to start up mysql with TCP networking enabled!
-mysqld --basedir=${BASEDIR} --datadir=${DBDIR} --pid-file=${PIDFILE} --skip-external-locking --socket=${SOCKET} --port=3307 --log_bin=${LOGDIR}/mysql/mysql-bin.log &
+mysqld --basedir=${BASEDIR} --datadir=${DBDIR} --pid-file=${PIDFILE} --skip-external-locking --socket=${SOCKET} --port=3307 --log_bin=${LOGDIR}/mysql/mysql-bin.log  --default-storage-engine=InnoDB &
 sleep 10
 
 connargs="--protocol=socket --socket=${SOCKET} "
