--- a/etc/settings_local.py.in
+++ b/etc/settings_local.py.in
@@ -18,3 +18,8 @@ DATABASES = {
 
 # Make this unique, and don't share it with anybody.
 SECRET_KEY = '@SECRETSECRET@'
+
+import logging
+logging.basicConfig(filename='@TOPDIR@/ajax.log'),
+                    level=logging.DEBUG) 
+
